--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -17,6 +17,7 @@
 .skill > img{
     border-radius: 50%;
     width: 108px;
+    height: 100%;
     margin-bottom: 15px;
     filter: drop-shadow(0px 4px 4px rgba(0,0,0,0.25));
 }
